// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create component should render a button to add new task if tasks were loaded 1`] = `
<Button
  active={false}
  disabled={false}
  onClick={[Function]}
  type="button"
  variant="primary"
>
  Add new task
</Button>
`;

exports[`Create component should render a disabled button if tasks are undefined 1`] = `
<Button
  active={false}
  disabled={true}
  onClick={[Function]}
  type="button"
  variant="primary"
>
  Add new task
</Button>
`;
